assets/sass/_core.scss
/* ... */
.mobile-menu {
  display: none;
  position: absolute;
  top: 13px;
  right: 0;
  width: 32px;
  height: 32px;
  cursor: pointer;
  i {
    display: none;
  }
  span.bar,
  span.bar:before, span.bar:after {
    width: 100%;
    height: 2px;
    background: #FFF;
    position: absolute;
    left: 0;
    transition: all ease .3s;
  }
  span.bar {
    top: 50%;
    transform: translateY(-50%);
  }
  span.bar:before, span.bar:after {
    content:"";
  }
  span.bar:before {
    top: -10px;
  }
  span.bar:after {
    top: 10px;
  }

  &.open {
    span.bar {
      transform: rotate(-45deg);
    }
    span.bar:before {
      transform: translateY(10px);
    }
    span.bar:after {
      transform: translateY(-9px) rotate(90deg);
    }
  }
  @include max($midwidth) {
    display: block;

  }

}

#site-navigation {
  width: 80%;
  .main-menu-wrap {
    width: 100%;
  }
  ul {
    margin: 0 0;
    padding: 0 0;
    list-style: none;
  }
  #primary-menu {
    display: inline-block;
    float: right;
    position: relative;
    @include tab {
      right: -15px;
    }
  }
  #primary-menu > li {
    float: left;
    position: relative;
  }
  #primary-menu a {
    display: block;
    text-decoration: none;
  }
  #primary-menu > li > a {
    font-family: $font_secondary;
    font-size: 14px;
    line-height: 1.2;
    color: #000;
    padding: 5px 15px;
    position: relative;
    &:after {
      content:"";
      display: block;
      width: 38%;
      height: 2px;
      background: #000;
      margin: 0 auto;
      position: relative;
      top: 2px;
      transition: all ease .3s;
      transform: scaleX(0);
    }
  }
  #primary-menu > li.current_page_item > a,
  #primary-menu > li:hover > a {
    color: $primary;
    &:after {
      transform: scaleX(1);
    }
  }

  #primary-menu > li.menu-item-has-children .menu-dropdown-btn {
    display: none;
  }

  #primary-menu > li > ul {
    // display: none;
    position: absolute;
    transition: all ease .3s;
    background: $primary;
    width: 230px;
    left: 50%;
    transform: translateY(-10px) translateX(-50%);
    opacity: 0;
    height: 0%;
    overflow: hidden;
  }
  #primary-menu > li > ul a {
    padding: 6px 15px;
    color: #FFF;
    font-size: 14px;
    line-height: 1.2;
  }
  #primary-menu > li > ul li:hover > a {
    opacity: 0.5;
  }
  #primary-menu > li:hover > ul {
    padding: 5px 0;
    opacity: 1;
    height: auto;
    margin-top: -3px;
    transform: translateY(0) translateX(-50%);
  }

  @include max($midwidth) {
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    max-width: 100%;
    width: 100%;
    height: 0%;
    overflow: auto;
    transition: all ease .3s;
    animation-duration: 0.5s;
    .main-menu-wrap {
      width: 100%;
      height: 100%;
      color: #FFF;
    }
    #primary-menu  {
      display: block;
      width: 100%;
      margin-top: 90px;
      padding-top: 0;
      padding-bottom: 50px;
      padding-left: 0;
      padding-right: 0;
      background: #000;
      border-top: 1px solid rgba(255,255,255,.15);
      a {
        color: #FFF!important;
      }
    }
    #primary-menu > li {
      display: block;
      width: 100%;
      border-bottom: 1px solid rgba(255,255,255,.15);
    }
    #primary-menu > li > a {
      padding: 14px 28px;
      font-size: 16px;
      opacity: 0;
      position: relative;
      &:after {
        display: none;
      }
    }
    #primary-menu > li.menu-item-has-children > a {
      display: block;
      width: calc(100% - 70px);
    }
    #primary-menu > li.menu-item-has-children .menu-dropdown-btn {
      display: inline-block;
      width: 55px;
      height: 48px;
      position: absolute;
      top: 0;
      right: 0;
      z-index: 5;
      border-left: 1px solid rgba(255,255,255,.15);
      &:before, &:after {
        content:"";
        display: block;
        width: 12px;
        height: 1px;
        background: #FFF;
        position: absolute;
        top: 23px;
        left: 25px;
      }
      &:before {
        transform: translateX(-8px) rotate(45deg);
      }
      &:after {
        transform: rotate(-45deg);
      }
    }
    #primary-menu > li.menu-item-has-children > ul {
      position: relative;
      width: 100%;
      height: auto;
      float: left;
      opacity: 1;
      transform: none;
      left: 0;
      margin:0 0;
      padding: 10px 30px;
      background: transparent;
      border-top: 1px solid rgba(255,255,255,.15);
      display: none;
      transition: none;
      transform: none;
      animation: none;
    }
    #primary-menu > li.menu-item-has-children > ul a {
      font-size: 16px;
      padding: 10px 15px;
    }
    #primary-menu > li.current-menu-item,
    #primary-menu > li.current_page_item,
    #primary-menu > li.current-menu-item > a,
    #primary-menu > li.current_page_item > a {
      background: $primary;
      color: #FFF;
    }
    #primary-menu > li > ul > li.current-menu-item > a,
    #primary-menu > li > ul > li.current-menu-item:hover > a {
      color: $primary!important;
      opacity: 1;
    }
    #primary-menu > li.current-menu-item,
    #primary-menu > li.current_page_item {
      ul {
        background: #000;
        top: 1px;
        border-bottom: 1px solid rgba(255,255,255,.15);
      }
    }
    &.open {
      display: block;
      height: 100%;
      #primary-menu > li > a {
        opacity: 1;
        @include animateThis(2s);
        @include animateEffect(fadeInLeft);
      }
    }

  }
}

.slides-wrapper {
  width: 100%;
  height: 90vh;
  position: relative;
  background-color: #333;
  .bottom-middle-line {
    width: 100%;
    position: absolute;
    left: 0;
    bottom: -3.5vh;
    text-align: center;
    z-index: 20;
    span {
      display: inline-block;
      width: 2px;
      height: 6vh;
      background: $primary;
      position: relative;
    }
  }
}
.slides-inner {
  overflow: hidden;
}
/* ... */

